[workspace]
resolver = "2"
members = [
    "crates/autumnus",
    "crates/autumnus-cli",
    "crates/autumnus-dev",
]

[workspace.package]
version = "0.7.8"
homepage = "https://autumnus.dev"
repository = "https://github.com/leandrocp/autumnus"
authors = ["Leandro Pereira <leandro@leandro.io>"]
edition = "2021"
rust-version = "1.86.0"
license = "MIT"

[workspace.dependencies]
autumnus = { version = "0.7.8", path = "crates/autumnus" }

anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
derive_builder = "0.20"
glob = "0.3"
lazy_static = "1.5"
regex = "1.12"
rustler = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3.14"
termcolor = "1.4"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-language = "0.1.5"
tree-sitter-diff = "0.1.0"
v_htmlescape = "0.15"

tree-sitter-asm = "0.24.0"
tree-sitter-bash = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cmake = "0.7.1"
tree-sitter-comment = "0.3.0"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-elm = "5.9.0"
tree-sitter-embedded-template = "0.25.0"
tree-sitter-erlang = "0.15.0"
tree-sitter-fsharp = "0.1.0"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.25.0"
tree-sitter-haskell = "0.23.1"
tree-sitter-hcl = "1.1.0"
tree-sitter-heex = "0.8.1"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-lua = "0.2.0"
tree-sitter-nix = "0.3.0"
tree-sitter-objc = "3.0.2"
tree-sitter-ocaml = "0.24.2"
tree-sitter-php = "0.24.2"
tree-sitter-powershell = "0.25.9"
tree-sitter-proto = "0.3.0"
tree-sitter-python = "0.25.0"
tree-sitter-r = "1.2.0"
tree-sitter-regex = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-scala = "0.24.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-swift = "0.7.1"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"

# build
cc = "1"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
rayon = "1"
syn = { version = "2.0", features = ["full", "parsing"] }

# dev
pretty_assertions = "1.4"

[profile.release]
lto = true
strip = true
