[package]
name = "autumnus-cli"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for the Autumnus syntax highlighter"
keywords = ["syntax", "highlighting", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "autumnus"
path = "src/main.rs"
doc = true

[dependencies]
autumnus = { workspace = true, default-features = true }
anyhow = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }
tree-sitter = { workspace = true }
tempfile = { workspace = true }
