[package]
name = "autumnus"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Syntax highlighter powered by Tree-sitter and Neovim themes."
keywords = ["syntax", "highlighting", "highlighter", "colouring", "tree-sitter"]
categories = ["text-processing"]

include = [
    "/build.rs",
    "/src/",
    "/../../vendored_parsers/tree-sitter-*/src/tree_sitter/*.h",
    "/../../vendored_parsers/tree-sitter-*/src/*.h",
    "/../../vendored_parsers/tree-sitter-*/src/*.c",
    "/../../vendored_parsers/tree-sitter-*/src/*.cc",
    "/../../vendored_parsers/tree-sitter-csv/csv/src/tree_sitter/*.h",
    "/../../vendored_parsers/tree-sitter-csv/csv/src/*.c",
    "/../../vendored_parsers/tree-sitter-comment/src/tree_sitter_comment/*.h",
    "/../../vendored_parsers/tree-sitter-comment/src/tree_sitter_comment/*.c",
    "/../../queries/README.md",
    "/../../queries/**/highlights.scm",
    "/../../queries/**/injections.scm",
    "/../../queries/**/locals.scm",
    "/../../css/*.css",
    "/../../themes/*.json",
    "/../../LICENSE",
    "/../../README.md",
]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
no-default-features = true

[lib]
name = "autumnus"
path = "src/lib.rs"

[features]
elixir-nif = ["rustler"]
default = ["all-languages", "nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]

all-languages = [
    "lang-angular",
    "lang-asm",
    "lang-astro",
    "lang-bash",
    "lang-c",
    "lang-caddy",
    "lang-clojure",
    "lang-cmake",
    "lang-comment",
    "lang-commonlisp",
    "lang-cpp",
    "lang-csharp",
    "lang-css",
    "lang-csv",
    "lang-dart",
    "lang-diff",
    "lang-dockerfile",
    "lang-eex",
    "lang-ejs",
    "lang-elixir",
    "lang-elm",
    "lang-erb",
    "lang-erlang",
    "lang-fish",
    "lang-fsharp",
    "lang-gleam",
    "lang-glimmer",
    "lang-go",
    "lang-graphql",
    "lang-haskell",
    "lang-hcl",
    "lang-heex",
    "lang-html",
    "lang-iex",
    "lang-java",
    "lang-javascript",
    "lang-json",
    "lang-kotlin",
    "lang-latex",
    "lang-liquid",
    "lang-llvm",
    "lang-lua",
    "lang-make",
    "lang-markdown",
    "lang-markdown-inline",
    "lang-nix",
    "lang-objc",
    "lang-ocaml",
    "lang-perl",
    "lang-php",
    "lang-powershell",
    "lang-protobuf",
    "lang-python",
    "lang-r",
    "lang-regex",
    "lang-ruby",
    "lang-rust",
    "lang-scala",
    "lang-scss",
    "lang-sql",
    "lang-surface",
    "lang-svelte",
    "lang-swift",
    "lang-toml",
    "lang-tsx",
    "lang-typescript",
    "lang-typst",
    "lang-vim",
    "lang-vue",
    "lang-xml",
    "lang-yaml",
    "lang-zig",
]

lang-angular = []
lang-asm = ["dep:tree-sitter-asm"]
lang-astro = []
lang-bash = ["dep:tree-sitter-bash"]
lang-c = ["dep:tree-sitter-c"]
lang-caddy = []
lang-clojure = []
lang-cmake = ["dep:tree-sitter-cmake"]
lang-comment = ["dep:tree-sitter-comment"]
lang-commonlisp = []
lang-cpp = ["dep:tree-sitter-cpp"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-css = ["dep:tree-sitter-css"]
lang-csv = []
lang-dart = []
lang-diff = []
lang-dockerfile = []
lang-eex = []
lang-ejs = ["dep:tree-sitter-embedded-template"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-elm = ["dep:tree-sitter-elm"]
lang-erb = ["dep:tree-sitter-embedded-template"]
lang-erlang = ["dep:tree-sitter-erlang"]
lang-fish = []
lang-fsharp = ["dep:tree-sitter-fsharp"]
lang-gleam = ["dep:tree-sitter-gleam"]
lang-glimmer = []
lang-go = ["dep:tree-sitter-go"]
lang-graphql = []
lang-haskell = ["dep:tree-sitter-haskell"]
lang-hcl = ["dep:tree-sitter-hcl"]
lang-heex = ["dep:tree-sitter-heex"]
lang-html = ["dep:tree-sitter-html"]
lang-iex = []
lang-java = ["dep:tree-sitter-java"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-json = ["dep:tree-sitter-json"]
lang-kotlin = []
lang-latex = []
lang-liquid = []
lang-llvm = []
lang-lua = ["dep:tree-sitter-lua"]
lang-make = []
lang-markdown = []
lang-markdown-inline = []
lang-nix = ["dep:tree-sitter-nix"]
lang-objc = ["dep:tree-sitter-objc"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-perl = []
lang-php = ["dep:tree-sitter-php"]
lang-powershell = ["dep:tree-sitter-powershell"]
lang-protobuf = ["dep:tree-sitter-proto"]
lang-python = ["dep:tree-sitter-python"]
lang-r = ["dep:tree-sitter-r"]
lang-regex = ["dep:tree-sitter-regex"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-rust = ["dep:tree-sitter-rust"]
lang-scala = ["dep:tree-sitter-scala"]
lang-scss = []
lang-sql = ["dep:tree-sitter-sequel"]
lang-surface = []
lang-svelte = ["dep:tree-sitter-svelte-ng"]
lang-swift = ["dep:tree-sitter-swift"]
lang-toml = ["dep:tree-sitter-toml-ng"]
lang-tsx = ["dep:tree-sitter-typescript"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-typst = []
lang-vim = []
lang-vue = []
lang-xml = ["dep:tree-sitter-xml"]
lang-yaml = ["dep:tree-sitter-yaml"]
lang-zig = ["dep:tree-sitter-zig"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
derive_builder = { workspace = true }
glob = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
rustler = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
termcolor = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-language = { workspace = true }
tree-sitter-diff = { workspace = true }
v_htmlescape = { workspace = true }

tree-sitter-asm = { workspace = true, optional = true }
tree-sitter-bash = { workspace = true, optional = true }
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-cmake = { workspace = true, optional = true }
tree-sitter-comment = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
tree-sitter-css = { workspace = true, optional = true }
tree-sitter-elixir = { workspace = true, optional = true }
tree-sitter-elm = { workspace = true, optional = true }
tree-sitter-embedded-template = { workspace = true, optional = true }
tree-sitter-erlang = { workspace = true, optional = true }
tree-sitter-fsharp = { workspace = true, optional = true }
tree-sitter-gleam = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-haskell = { workspace = true, optional = true }
tree-sitter-hcl = { workspace = true, optional = true }
tree-sitter-heex = { workspace = true, optional = true }
tree-sitter-html = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
tree-sitter-lua = { workspace = true, optional = true }
tree-sitter-nix = { workspace = true, optional = true }
tree-sitter-objc = { workspace = true, optional = true }
tree-sitter-ocaml = { workspace = true, optional = true }
tree-sitter-php = { workspace = true, optional = true }
tree-sitter-powershell = { workspace = true, optional = true }
tree-sitter-proto = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-r = { workspace = true, optional = true }
tree-sitter-regex = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-scala = { workspace = true, optional = true }
tree-sitter-sequel = { workspace = true, optional = true }
tree-sitter-svelte-ng = { workspace = true, optional = true }
tree-sitter-swift = { workspace = true, optional = true }
tree-sitter-toml-ng = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-xml = { workspace = true, optional = true }
tree-sitter-yaml = { workspace = true, optional = true }
tree-sitter-zig = { workspace = true, optional = true }

[build-dependencies]
cc = { workspace = true }
glob = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rayon = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
