[package]
name = "dev"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
lumis = { path = "../lumis", features = ["all-languages"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
